# musubi

./: .clang-format  .gitignore  .luarc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ariadne.lua  ariadne_new.lua  build.rs  clippy.toml  justfile  musubi.c  musubi.def.lua  musubi.h  test.lua  test_new.lua  unidata.h
.github/: c_port.md  copilot-instructions.md  project-structure.md  roadmap.md
.github/workflows/: test.yml
examples/: basic.rs  demo.c  demo.lua  example.c
luaport/: ariadne.lua  test.lua
misc/: musubi-0.1.0-2.rockspec  musubi-0.3.0-3.rockspec  musubi-0.4.0-1.rockspec  musubi-dev-1.rockspec
src/: ffi.rs  ffi_generated.rs  lib.rs  musubi_impl.c
tests/: test.lua
writtings/: motivation.md  motivation.zh.md
